<resources>
    <string name="app_name">Height Calculator</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_description">If you want to know your height, you can easily do it with this tool. All you need to do is to input your height in the text box below and hit the calculate button!\nJust type and learn!</string>
    <string name="input_hint">Input your height (cm)</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_share">Share</string>
    <string name="button_source">Source</string>
</resources>