<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_description"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginBottom="30dp"
            android:lineSpacingExtra="3dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:maxLines="1"
            android:maxLength="4"
            android:inputType="number"
            android:importantForAutofill="no"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"/>

        <Button
            android:id="@+id/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_calculate"
            android:layout_margin="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-2951689275458403/3038096884"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_share"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:strokeColor="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#b3b3b3"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <Button
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_source"
                app:strokeWidth="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:strokeColor="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="berkantkz"
            android:textStyle="italic|bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>